--- a/pom.xml
+++ b/pom.xml
@@ -186,7 +186,9 @@
 				<!--Exclusiones para reporte de cobertura-->
 				<configuration>
 					<excludes>
-						<exclude>com/project1/ms_account_service/MsAccountServiceApplication.class</exclude>
+						<exclude>com/project1/ms_credit_service/MsCreditServiceApplication.class</exclude>
+						<exclude>com/project1/ms_credit_service/model/**</exclude>
+						<exclude>com/project1/ms_credit_service/api/**</exclude>
 					</excludes>
 				</configuration>
 				<!--Exclusiones para reporte de cobertura-->
